--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,8 @@
         <link rel="stylesheet" href="css/estilo.css" />
     </head>
     <body>
-        <h1>Aqui vamos a hacer un blog post</h1>
-        <p>Y este es el parrafo de inicio</p>
+        <h1>Este es el titulo atractivo e interesante del post</h1>
+        <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increible que se puedes hacer con ramas</p>
+        <p>Los blog son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en Yputube, Excepto si eres un rockstar. Pero estadicticamente no lo eres... por ahora. </p>
     </body>
 </html>
